<?xml version="1.0"?>
<package>
  <name>asr_intermediate_object_generator</name>
  <version>1.0.0</version>
  <description>
    The intermediate object generator generates intermediate objects for a domain composed from scenes. 
    It is used to restrain the amount of objects searched during the direct search phase by selecting appropriate objects to search.
  </description>
  <author>Borella Jocelyn, Meißner Pascal</author>
  <maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>Boost</build_depend>
  <build_depend>asr_lib_ism</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>Boost</run_depend>
  <run_depend>asr_lib_ism</run_depend>

</package>
